Force overwrite remote with local changes